--- a/src/Components/AllTeams/AllTeams.css
+++ b/src/Components/AllTeams/AllTeams.css
@@ -15,3 +15,40 @@
   font-size: 45px;
   color: white;
 }
+
+@media (max-width: 992px) {
+  .stadium-bg {
+    width: 100%;
+    height: 230px;
+  }
+  .stadium h2 {
+    position: absolute;
+    top: 150px;
+    left: 350px;
+  }
+  .all-teams {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    background-color: #222f3e;
+  }
+}
+@media (max-width: 688px) {
+  .stadium-bg {
+    width: 100%;
+    height: 230px;
+  }
+  .stadium h2 {
+    position: absolute;
+    top: 150px;
+    left: 180px;
+    font-size: 45px;
+    color: white;
+  }
+  .all-teams {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    background-color: #222f3e;
+  }
+}
