--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -12,6 +12,7 @@
 .team:hover {
   background-color: #ff3838;
   border: 5px solid #ffaf40;
+  transform: scale(1.1, 1.1);
 }
 .team-badge {
   width: 30%;
