--- a/src/Components/AllTeams/AllTeams.css
+++ b/src/Components/AllTeams/AllTeams.css
@@ -15,7 +15,36 @@
   font-size: 45px;
   color: white;
 }
-
+@media (max-width: 1365px) {
+  .stadium-bg {
+    width: 100%;
+    height: 280px;
+  }
+  .stadium h2 {
+    position: absolute;
+    top: 80px;
+    left: 105px;
+    font-size: 45px;
+    color: white;
+  }
+}
+@media (max-width: 1032px) {
+  .stadium-bg {
+    width: 100%;
+    height: 280px;
+  }
+  .stadium h2 {
+    position: absolute;
+    top: 80px;
+    left: 350px;
+  }
+  .all-teams {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    background-color: #222f3e;
+  }
+}
 @media (max-width: 992px) {
   .stadium-bg {
     width: 100%;
@@ -33,6 +62,7 @@
     background-color: #222f3e;
   }
 }
+
 @media (max-width: 688px) {
   .stadium-bg {
     width: 100%;
