--- a/src/Components/AllTeams/AllTeams.css
+++ b/src/Components/AllTeams/AllTeams.css
@@ -1,6 +1,7 @@
 .all-teams {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  align-items: center;
   justify-items: center;
   background-color: #222f3e;
 }
@@ -25,8 +26,12 @@
     top: 80px;
     left: 550px;
   }
+  .all-teams {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
-@media (max-width: 1032px) {
+@media (max-width: 1204px) {
   .stadium-bg {
     width: 100%;
     height: 280px;
@@ -61,7 +66,7 @@
   }
 }
 
-@media (max-width: 688px) {
+@media (max-width: 798px) {
   .stadium-bg {
     width: 100%;
     height: 230px;
